Updated Demo to Version TWO

--- a/nw.html
+++ b/nw.html
@@ -3,6 +3,6 @@
     <script type="text/javascript" src="mods/updater.js"></script>
 </head>
 <body onload=UPDATER.update("shrewdlogarithm","node-webkit-auto-update-demo")>
-    <H1>This is Version One</H1>
+    <H1>This is Version TWO</H1>
 </body>
 </html>
